Trying to prevent background scrolling when modals are active on Safari.

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -32,8 +32,9 @@ body {
 // TRANSITION ADD/REMOVE CLASSES
 
 .noScroll {
+  position: relative;
   overflow: hidden;
-  pointer-events: none;
+  pointer-events: none !important;
 }
 
 
